ajuste responsivo banner

--- a/style.css
+++ b/style.css
@@ -619,4 +619,32 @@ footer{
         text-align: center;
        
     }
+    footer{
+        display: flex;
+        flex-direction: column;
+        
+    }
+   footer .nav-footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: flex-start;
+  
+    font-size: 20px;
+   }
+   footer .nav-footer .footer-uno {
+    width: 100%;
+    
+    margin-bottom: 30px;
+   }
+   footer .nav-footer .footer-tres{
+    margin-bottom: 40px;
+   }
+   footer .nav-footer .footer-cuatro{
+    margin-top: 50px;
+   }
+   footer .footer-cinco{
+    display: flex;
+    flex-direction: column;
+   }
 }
