--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ header .navbar .navbar-logo i{
 .contenedor-banner{
     position: relative;
 	width: 100%;
-    height: 560px;
+   
 	border-radius: 15px;
 	box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.66);
     overflow: hidden;
@@ -160,7 +160,8 @@ header .navbar .navbar-logo i{
 }
 
 .contenido-banner .banner a{
-    margin-top: 700px;border: 1px solid;
+    margin-top: 700px;
+    border: 1px solid;
     padding: 10px ;
     color: var(--iv-dark);
     border-radius: 15px;
@@ -601,16 +602,30 @@ footer{
     }
     .padre{
         margin:0 20px;
+        
+    }
+    .padre .contenedor-banner .slider-banner{
+        width: 400%;
+    }
+    .padre .contenedor-banner .slider-banner .contenido-banner{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        text-align: center;
+        width: 300px;
+        height: 100vh;
+        
     }
 
-    .contenido-banner img{
-       width: 30%;
+    .padre .contenedor-banner .slider-banner .contenido-banner img{
+        margin-left: 0;
+        width: 60%;
+        
     }
-    .slider-banner .contenido-banner{
-        width: calc(50% / 4)
-    }
+  
     .contenido-banner .banner{
-        width:300px;
+      width: 100%;
     }
     .barra .navdos{
         display: flex;
