--- a/acerca.css
+++ b/acerca.css
@@ -9,14 +9,14 @@ main{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-  
+    padding: 7rem 0;
     background: linear-gradient(360deg, rgba(247, 166, 166, 0.829), rgba(192, 22, 22, 0));
 }
 
 .contenedor-banner_acerca{
-    position: relative;
 	width: 100%;
     background: transparent;
+    
 	
 	
    
@@ -30,21 +30,22 @@ main{
    flex-direction: column;
 	align-items: center;
     background: transparent;
+   
 }
   
 .slider-banner_acerca .contenido-banner_acerca{
-  padding: 100px;
+  padding: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .contenido-banner_acerca .banner-acerca{
-    width: 500px;
+    width: 100%;
 }
 
 .contenido-banner_acerca img{
     width: 500px;
-    margin-left: 250px;
+    margin-left: 50px;
 }
 .contenido-banner_acerca .banner-acerca h1{
     font-size: 40px;
@@ -61,20 +62,25 @@ main{
 	align-items: center;
 	justify-content: center;
     background-color: var(--iv-white);
+    padding: 7rem 0;
+    width: 100%;
 }
 
 
-.contenido-banner_equipo{
+.contenedor-equipo .contenido-banner_equipo{
     width: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    padding: 20px;
+    padding: 5rem 2rem;
+    
+  
 
 }
-.banner-equipo{
-    padding: 30px;
+.contenedor-equipo .contenedor-banner_equipo .slider-banner_equipo .contenido-banner_equipo .banner-equipo{
+    margin: 20px;
+    width: 500px;
+    border: 1px solid;
+    padding: 5rem 0;
 }
 
 .banner-equipo h1{
@@ -83,22 +89,19 @@ main{
 }
 
 .banner-contacto{
-    width: 400px;
-    height: 500px;
+    width: 500px;
+   
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 15px;
-    padding: 20px;
-    margin: 10px;
 }
-
 .banner-contacto_img{
-    width: 300px;
-    height: 300px;
+    width: 150px;
     
 }
+
 .banner-contacto_img img{
     width: 100%;
     border-radius: 50px;
@@ -113,6 +116,7 @@ main{
     text-align: center;
     width: 100%;
     padding: 50px;
+    
 }
 .banner-socios h1{
     font-size: 40px;
@@ -122,6 +126,8 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 2;
     width: 100%;
     padding: 20px;
     margin-top: 50px;
@@ -156,9 +162,11 @@ main{
 
 .contenedor-vmo .contenido-banner_vmo{
     display: flex;
+    flex-wrap: wrap;
+    gap: 1;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding:50px  10px;
 }
 
 .contenedor-vmo .contenido-banner_vmo .banner-vmo{
@@ -167,7 +175,7 @@ main{
     justify-content: center;
     align-items: center;
     width: 400px;
-    height: 500px;
+    padding: 20px;
     margin-left: 20px;
     
 }
@@ -191,4 +199,232 @@ main{
     margin-top: 30px;
     margin-bottom: 30px;
     font-size: 40px;
+}
+
+@media screen and (max-width: 1024px){
+    .contenedor{
+        width: 100%;
+        
+    }
+    .contenido-banner_acerca .banner-acerca{
+        width: 400px;
+        padding: 20px;
+        font-size: 10px;
+    }
+    
+    .contenido-banner_acerca img{
+        width: 300px;
+        margin-left: 30px;
+    } 
+    .contenido-banner_acerca .banner-acerca h1{
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+    .contenido-banner_acerca .banner-acerca p{
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .contenedor-equipo{
+        width: 100%;
+        display: flex;
+       
+    }
+    .contenedor-equipo .contenedor-banner_equipo{
+        width: 100%;
+        display: flex;
+        
+       
+    }
+    .contenedor-equipo .contenedor-banner_equipo .slider-banner_equipo{
+        width: 100%;
+        display: flex;
+        
+    }
+    .contenedor-equipo .contenedor-banner_equipo .slider-banner_equipo .contenido-banner_equipo{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .contenedor-equipo .contenedor-banner_equipo .slider-banner_equipo .contenido-banner_equipo .banner-equipo{
+        padding: 15px;
+        width: 200px;
+    }
+    .contenedor-equipo .contenedor-banner_equipo .slider-banner_equipo .contenido-banner_equipo .banner-contacto{
+        width: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 5px;
+    }
+    .contenedor-equipo .contenedor-banner_equipo .slider-banner_equipo .contenido-banner_equipo .banner-contacto .banner-contacto_img{
+        width: 50px;
+    }
+    .contenedor-equipo .contenedor-banner_equipo .slider-banner_equipo .contenido-banner_equipo .banner-contacto .banner-contacto_img img{
+        width: 100%;
+    }
+    .contenedor-vmo .contenido-banner_vmo .banner-vmo{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        padding: 10px;
+        margin-left: 15px;
+        
+    }
+
+}
+
+@media screen and (max-width: 985px){
+    .contenedor{
+        max-width: 100%;
+        
+    }
+    .contenido-banner_acerca .banner-acerca{
+        width: 400px;
+        padding: 20px;
+        font-size: 10px;
+    }
+    
+    .contenido-banner_acerca img{
+        width: 350px;
+        margin-left: 50px;
+    } 
+    .contenido-banner_acerca .banner-acerca h1{
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+    .contenido-banner_acerca .banner-acerca p{
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+}
+
+@media screen and (max-width: 768px){
+
+
+    .contenedor-equipo{
+        width: 100%;
+       
+    }
+
+    .contenedor-banner_equipo{
+        width: 100%;
+    }
+    .slider-banner_equipo{
+        width: 100%;
+    }
+    .banner-contacto{
+        display: flex;
+        flex-direction: row;
+        width: 70%;
+       justify-content: space-around;
+    }
+
+    .banner-equipo{
+        width: 70%;
+    }
+    .contenido-banner_equipo{
+        width: 100%;
+        
+    }
+
+    .contenido-banner_equipo{
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .banner-contacto_img{
+        width: 200px;
+    }
+
+    .contenedor{
+        width: 100%;
+    }
+    .contenido-banner_acerca{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items:center;
+        width: 100%;
+    }
+    .contenido-banner_acerca img{
+        width: 400px;
+        margin-left: 10px;
+    }
+    .contenido-banner_acerca .banner-acerca h1,
+    .contenido-banner_acerca .banner-acerca p{
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 350px){
+
+
+    .contenedor-equipo{
+        width: 100%;
+      
+    }
+
+    .contenedor-banner_equipo{
+        width: 100%;
+        
+    }
+    .slider-banner_equipo{
+        width: 100%;
+       
+    }
+    .contenedor-equipo .contenedor-banner_equipo .slider-banner_equipo .contenido-banner_equipo .banner-contacto{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+       justify-content: space-around
+    }
+   
+
+    .contenedor-equipo .contenedor-banner_equipo .slider-banner_equipo .contenido-banner_equipo .banner-equipo{
+        width: 600px;
+        padding: 40px;
+        
+    }
+    .contenido-banner_equipo{
+        width: 100%;
+        padding: 0;
+        
+    }
+
+    .contenido-banner_equipo{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+    }
+    .banner-contacto_img{
+        width: 600px;
+    }
+
+    .contenedor{
+        width: 100%;
+    }
+    .contenido-banner_acerca{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items:center;
+        width: 100%;
+        
+    }
+    .contenido-banner_acerca img{
+        width: 300px;
+       
+    }
+    .contenido-banner_acerca .banner-acerca h1,
+    .contenido-banner_acerca .banner-acerca p{
+        text-align: center;
+        font-size: 20px;
+    }
 }
