--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ header .navbar .navbar-logo i{
 .barra{
     width: 100%;
     height: 150px;
-    background: linear-gradient(360deg, rgba(204, 36, 36, 0.829), rgba(192, 22, 22, 0));
+    background: linear-gradient(360deg, rgba(56, 55, 55, 0.829), rgba(192, 22, 22, 0));
     display: flex;
     align-items: center;
     justify-content: center;
@@ -263,7 +263,7 @@ header .navbar .navbar-logo i{
 
 .navdos a.active,
 .navdos a:hover{
-    background: var(--bs-rojo);
+    background: #eee9e9;
 }
 
 /*ARTICULOS*/
@@ -285,44 +285,43 @@ header .navbar .navbar-logo i{
 .caja-articulo{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 10px;
     width: 300px;
     height: 300px;
     border-radius: 15px;
-    position: relative;
     box-shadow: 0 1px 10px 0 rgba(204, 36, 36, 0.829);
     
 }
 
 .caja-articulo:hover{
-    width: 310px;
     height: 310px;
+    box-shadow: 0 1px 10px 0 rgba(36, 28, 28, 0.829);
 }
 .caja-articulo h1{
-    position: absolute;
-    top: 150px;
-    margin-left: 10px;
-    z-index: 1;
-    background-color: var(--iv-danger);
+    
+   
+    
+    background-color: #eee9e9;
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 20px;
     cursor: pointer;
 }
 .caja-articulo p{
-    position: absolute;
-    top: 200px;
-    margin-top: 10px;
-    margin-left: 10px;
-    z-index: 1;
+    text-align: center;
     border-radius: 10px;
     padding: 5px;
-    background-color: #fff;
+    
 }
 
+.caja-img{
+    width: 100px;
+}
 .caja-articulo img{
     width: 100%;
-    height: 100%;
-    position: absolute;
+   
+   
 }
 
 
@@ -410,7 +409,7 @@ footer{
     align-items: center;
     justify-content: center;
     width: 100%;
-    background: #f0a0a8;
+    background: #eee9e9;
     padding-top: 40px;
 }
 
@@ -514,7 +513,7 @@ footer{
     justify-content: space-around;
     width: 100%;
 
-    border: 2px solid var(--bs-rojo);
+    border: 2px solid #c2bebe;
     align-items: center;
     font-weight: bold;
     font-size: 20px;
