--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header{
     padding: 10px 0;
     display: flex;
     box-shadow: 0 1px 10px rgba(204, 36, 36, 0.829);
+    padding: 2rem 0;
 }
 
 .header .navbar{
