--- a/contacto.css
+++ b/contacto.css
@@ -189,3 +189,17 @@
         border-radius: 8px;
     }
 }
+
+@media  (max-width:420px){
+
+    .form .form__contenedor .form__contenedor-registro{
+        padding: 0 2.5rem;
+    }
+    .form .form__contenedor .form__contenedor-registro form input {
+        width: 90%;
+    
+    } 
+    .form .form__contenedor .form__contenedor-registro form textarea {
+        width: 90%;
+    } 
+}
