--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ footer{
     }
    .header .navbar{
        display: flex;
-       margin: 0 20px;
+       margin: 0 40px;
        
 
    }
@@ -609,7 +609,7 @@ footer{
        width: 100%;
        text-align: center;
        position: absolute;
-       top:4.6rem;
+       top:7.8rem;
        right: 0;
        list-style-type: none;
        padding: 2rem;
@@ -640,7 +640,6 @@ footer{
     align-items: center;
     text-align: center;
     width: 750px;
-    height: 100vh;
     margin: 20px;
     
 }
@@ -648,6 +647,7 @@ footer{
 .padre .contenedor-banner .slider-banner .contenido-banner img{
     margin-left: 0;
     width: 60%;
+    margin-top: 40px;
     
 }
 
@@ -769,26 +769,28 @@ flex-direction: column;
     }
     .padre .contenedor-banner .slider-banner{
         width: 400%;
+        
     }
     .padre .contenedor-banner .slider-banner .contenido-banner{
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
-        text-align: center;
+        margin: 0px 60px;
         width: 400px;
-        height: 100vh;
+       
         
     }
 
     .padre .contenedor-banner .slider-banner .contenido-banner img{
         margin-left: 0;
         width: 60%;
-        
+       
     }
   
     .contenido-banner .banner{
       width: 100%;
+
     }
     .barra .navdos{
         display: flex;
